example/lib/src/generated/errors/errors_localization_de.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for German (`de`).
class ErrorsLocalizationDe extends ErrorsLocalization {
  ErrorsLocalizationDe([String locale = 'de']) : super(locale);

  @override
  String get error => 'Ein Fehler ist aufgetreten';

  @override
  String get unexpectedError => 'Ein unerwarteter Fehler ist aufgetreten';

  @override
  String get bugReportSentText => 'Fehlerbericht wurde erfolgreich gesendet.';
}
